bugfixed at some places and create strip account for users
